# bazel_android_instrumentation_test_example

./: .gitignore  AndroidManifest.xml  BUILD.bazel  TestAndroidManifest.xml  WORKSPACE  manual_adb_test.sh
java/com/example/android/testing/espresso/BasicSample/: MainActivity.java
javatests/com/example/android/testing/espresso/BasicSample/test/: ChangeTextBehaviorTest.java
res/layout/: activity_main.xml
