android_library(
    name = "BasicSampleLib",
    srcs = glob(["java/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.BasicSample",
    manifest = "AndroidManifest.xml",
    exports_manifest = 0,
    resource_files = glob(["res/**/*"]),
    deps = ["@com_google_guava_guava//jar"],
)

android_binary(
    name = "BasicSample",
    custom_package = "com.example.android.testing.espresso.BasicSample",
    manifest = "AndroidManifest.xml",
    deps = [":BasicSampleLib"],
)

java_library(
    name = "test_deps",
    exports = [
	"@com_google_inject_guice//jar",
	"@javax_inject_javax_inject//jar",
	"@junit_junit//jar",
	"@org_hamcrest_java_hamcrest//jar",
        "@com_android_support_test_espresso_espresso_core_3_0_1//aar",
        "@com_android_support_test_espresso_espresso_idling_resource_3_0_1//aar",
        "@com_android_support_test_rules_1_0_1//aar",
        "@com_android_support_test_runner_1_0_1//aar",
	"@com_android_support_support_annotations_26_0_0//jar",
    ],
)

android_library(
    name = "BasicSampleTestLib",
    srcs = glob(["javatests/**/*.java"]),
    custom_package = "com.example.android.testing.espresso.BasicSample.test",
    manifest = "TestAndroidManifest.xml",
    deps = [
        ":BasicSampleLib",
	":test_deps",
    ],
)

android_binary(
    name = "BasicSampleTest",
    custom_package = "com.example.android.testing.espresso.BasicSample.test",
    instruments = ":BasicSample",
    manifest = "TestAndroidManifest.xml",
    deps = [":BasicSampleTestLib"],
)

android_instrumentation_test(
    name = "BasicSampleInstrumentationTest",
    timeout = "moderate",
    instrumentation = ":BasicSampleTest",
    target_device = "@android_test_support//tools/android/emulated_devices/nexus_6:android_23_x86_qemu2",
)